# Desktop-music-space-station

./: Audio Engine Header  Audio Engine Implementation  Audio Source Interface  AudioEngine.cpp  AudioEngine.h  AudioEngine.hpp  AudioSource.hpp  CMakeLists.txt  HardwareController.cpp  HardwareController.hpp  Include  LICENSE.txt  LedStripController.cpp  LedStripController.hpp  MusicController.cpp  README.md  RingBuffer.h  RingBuffer.hpp  SystemInterfaces.hpp  Test and Review logs  WavDecoder.hpp  main.cpp  music controller  run.sh  setup.sh  temp-CMake  temp-monitormain.cpp  temp_monitor_en.cpp
Assets/: Blank space
Docs/: blank files.txt
Include/: UIHandler.hpp
MPM/: CMakeLists.txt  WavDecoder.cpp  WavDecoder.hpp  main.cpp  test_mpm.cpp  新建 文本文档.txt
MPM/include/: AudioEngine.hpp  AudioSource.hpp  HardwareController.hpp  LedStripController.hpp  MediaProgressManager.hpp  MusicController.hpp  RingBuffer.hpp  WavDecoder.hpp
MPM/src/: AudioEngine.cpp  HardwareController.cpp  LedStripController.cpp  MediaProgressManager.cpp  MusicController.cpp  RingBuffer.cpp  WavDecoder.cpp
Monitor/: EnvironmentMonitor.cpp  EnvironmentMonitor.hpp
UI/: CMakeLists.txt  README.md
UI/include/: FramebufferUI.hpp  InteractionManager.hpp  TouchHandler.hpp  UIRenderer.hpp
UI/src/: FramebufferUI.cpp  InteractionManager.cpp  TouchHandler.cpp  UIRenderer.cpp
UI/tests/: main.cpp  test_ui_logic.cpp
audio-engine/: AudioEngine.cpp  AudioEngine.hpp  CMakeList.txt
hardware/: CMakeLists.txt  Flowing Lights.cpp  HardwareController.cpp  HardwareController.hpp  LedStripController.cpp  LedStripController.hpp  main.cpp
include/: AudioFormat.hpp  WavDecoder.hpp
src/: AlsaOut.cpp  AlsaOut.h  LED.cpp  LED.hpp  Mp3DecodeAll.cpp  Mp3DecodeAll.h  PIR.cpp  PIR.hpp  Player.cpp  Player.hpp  PlayerCore.cpp  PlayerCore.h  alsa_wav_player.cpp  main.cpp
temp/: temp_monitor.cpp
